[package]
name = "stealth-lib"
version = "0.1.0"
edition = "2021"
description = "Utility functions for ZKP"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.29.0"
primitive-types = "0.12.1"
hex = "0.4.3"