[package]
name = "stealth-lib"
version = "1.0.1"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "ZK-friendly cryptographic primitives (MiMC hash, Merkle trees)"
repository = "https://github.com/stealth-cash/stealth-lib"
documentation = "https://docs.rs/stealth-lib"
readme = "README.md"
keywords = ["cryptography", "merkle-tree", "zero-knowledge", "mimc", "zkp"]
categories = ["cryptography", "data-structures"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
borsh = ["dep:borsh"]
experimental = []

[dependencies]
hex = "0.4.3"

# Optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
borsh = { version = "1.4.0", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "mimc"
harness = false

[[bench]]
name = "merkle"
harness = false